--- a/README
+++ b/README
@@ -12,3 +12,5 @@ To build this library, it requires .Net 4 and Microsoft Silverlight for Window P
 
 I have also blogged about this code at:
 http://confusedeveloper.wordpress.com/2011/11/16/windows-phone-7-async-sdk-for-amazon-s3/
+
+You can find out about the other stuff we work on in our company "Confiz Solutions" at: http://www.confiz.com/
